Change Vue.js components in Rails View

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'hello_vue' %> 
+    <%= javascript_pack_tag 'main_vue', 'data-turbolinks-track': 'reload' %>
 
   </head>
 
   <body>
+    <div data-behavior="vue"><app></app>
     <%= yield %>
+    </div>
   </body>
 </html>
