--- a/app/views/weclome/index.html.erb
+++ b/app/views/weclome/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Weclome#index</h1>
 <p>Find me in app/views/weclome/index.html.erb</p>
-<app></app>
+<app :message= "<%= "hello".to_json %>"></app>
 </div>
