--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Weclome#index</h1>
-<p>Find me in app/views/weclome/index.html.erb</p>
+<h1>Welcome#index</h1>
+<p>Find me in app/views/welcome/index.html.erb</p>
 <app :message= "<%= "hello".to_json %>"></app>
 </div>
 
